--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "browser-sync": "^3.0.2",
     "browserify": "^17.0.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-minify": "^3.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^10.0.0",
-    "gulp-sass": "^5.1.0",
+    "gulp-sass": "^5.0.0",
+    "gulp5-sass-plugin": "^1.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-strip-css-comments": "^3.0.0",
     "gulp-touch-cmd": "0.0.1",
     "gulp-uglify": "^3.0.2",
-    "gulplog": "^2.0.1",
-    "node-sass": "^9.0.0",
-    "postcss": "^8.4.35",
-    "sass": "^1.70.0",
+    "gulplog": "^2.2.0",
+    "node-gyp": "10.1.0",
+    "postcss": "^8.4.38",
+    "sass": "^1.76.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
